[add] GET /users/:username/books/:readId handler
